# DataSetConvertTool

./: CMakeCache.txt  CMakeLists.txt  DatasetLabelConvert  DatasetLabelConvert.cbp  Makefile  cmake_install.cmake  csvreader.h  definition.h  labelmap.csv  labelmap3cl.csv  main.cpp  platecrop.cpp  platecrop.h  toyoloconvert.cpp  toyoloconvert.h  trainvalspilit.cpp  trainvalspilit.h  xmlyoloconvert.cpp  xmlyoloconvert.h
src/: csvreader.cpp  ocrdataconvert.cpp  ocrdataconvert.h  platecrop.cpp  platecrop.h  toyoloconvert.cpp  toyoloconvert.h  trainvalspilit.cpp  xmlyoloconvert.cpp  xmlyoloconvert.h
